--- a/main.css
+++ b/main.css
@@ -1,37 +1,31 @@
 h1 {
-    font-size: ;
-    font-family: ;
-    padding: ;
-    margin: ;
-    font-weight: ;
-    text-decoration: ;
-    color: ;
-    background-color: ;
+  font-size: 48px;
+  font-family: "Times New Roman", Times, serif;
+  margin-right: 25%;
+  margin-left: 25%;
+  font-weight: 700;
 }
 
 h2 {
-    font-size: ;
-    font-family: ;
-    padding: ;
-    margin: ;
-    font-weight: ;
-    color: ;
-    background-color: ;
+  font-size: 36px;
+  font-family: "Times New Roman", Times, serif;
+  margin-right: 25%;
+  margin-left: 25%;
+  font-weight: 700;
 }
 
 p {
-    font-family: ;
-    font-size: ;
-    padding: ;
-    margin: ;
-    color: ;
-    background-color: ;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 24px;
+  margin-right: 25%;
+  margin-left: 25%;
 }
 
 .logo {
-    background-size: cover;
-    background-image: url();
-    background-color: ;
-    height: ;
-    width: ;
+  background-size: cover;
+  background-image: url(https://appacademy.github.io/styleguide/assets/logo/logo-emblem-black-1000.png);
+  margin-right: 25%;
+  margin-left: 25%;
+  height: 100px;
+  width: 100px;
 }
